# resilienceOS

./: .gitignore  INSTALL.md  Makefile  README.md  agent_prompts.md  openai.env.example  pyproject.toml  resilienceos.skill.json  setup.py
.agents/skills/resilienceos/: SKILL.md
.agents/skills/resilienceos/agents/: openai.yaml
.agents/skills/resilienceos/references/: openai_yaml.md
.agents/skills/resilienceos/scripts/: resilienceos-healthcheck.sh  resilienceos-smoke-checks.sh
fixtures/: drainage_complaints.json  drill_reports.json  forecast_feed_bali.json  forecast_feed_riverfront.json  forecast_feed_singapore.json  scenario_bali_like.json  scenario_riverfront.json  scenario_singapore_coastal.json  vulnerability_profiles.json
frontend/: app.py
scripts/: resilienceos-demo-shot.sh  resilienceos-demo-ui.sh
scripts/demo-presets/: high-risk.env  judge.env
src/resilienceos/: __init__.py  cli.py  engine.py  evaluation.py  markdown_render.py  models.py  risk.py  utils.py
src/resilienceos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
