[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resilienceos"
description = "AI resilience agent for neighborhood environmental crisis preparedness"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.8",
  "jinja2>=3.1"
]

[project.scripts]
resilienceos = "resilienceos.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
