[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "resilienceos"
description = "AI resilience agent for neighborhood environmental crisis preparedness"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.8",
  "jinja2>=3.1"
]

[project.scripts]
resilienceos = "resilienceos.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
